# HX-NekoMimi

./: .gitignore  README.md  build.gradle.kts  gradle.properties  gradlew  settings.gradle.kts
.github/workflows/: release.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: .gitignore  CMakeLists.txt  ass_jni.c  build_deps.sh
app/src/main/java/com/hx/nekomimi/: MainActivity.kt  NekoMimiApp.kt
app/src/main/java/com/hx/nekomimi/bgm/: BgmManager.kt
app/src/main/java/com/hx/nekomimi/data/: AppDatabase.kt
app/src/main/java/com/hx/nekomimi/di/: AppModule.kt
app/src/main/java/com/hx/nekomimi/player/: NekoNotificationProvider.kt  PlaybackService.kt  PlayerManager.kt
app/src/main/java/com/hx/nekomimi/service/: MediaPlaybackService.kt
app/src/main/java/com/hx/nekomimi/subtitle/: AssParser.kt  AssRenderer.kt  SrtParser.kt  SubtitleDisplayMode.kt  SubtitleManager.kt  (+1 more)
app/src/main/res/drawable/: bg_chat_bubble_left.xml  bg_chat_bubble_right.xml  bg_play_button.xml  ic_bgm.xml  ic_book_empty.xml  ic_forward_30.xml  ic_headphones.xml  ic_launcher_background.xml  ic_launcher_foreground.xml  ic_music_note.xml  ic_notification.xml  ic_play.xml  ic_play_circle.xml  ic_replay_30.xml  ic_subtitle_mode.xml
app/src/main/res/layout/: activity_book_detail.xml  activity_main.xml  activity_player.xml  dialog_add_book.xml  dialog_bgm_settings.xml  item_book.xml  item_chapter.xml  item_subtitle.xml  item_subtitle_chat_left.xml  item_subtitle_chat_right.xml  item_subtitle_dual.xml
app/src/main/res/menu/: menu_book_detail.xml  menu_main.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
doc/: 原型架构.md
gradle/: libs.versions.toml
(+40 files in other folders)
